# Comp_Algo

./: .env.example  .gitignore  BRANCH_STRATEGY.md  CI_STATUS.md  CLI_DOCUMENTATION_UPDATE.md  CLI_USER_FLOWS.md  DEV_10_DAY_PLAN.md  FLOW_TABLES.md  IMPLEMENTATION_SUMMARY.md  MANAGER_SUMMARY.md  P0_COMPLETION_SUMMARY.md  P0_P1_COMPLETE.md  P0_P1_STATUS.md  P0_TESTING_COMPLETE.md  P0_TEST_MATRIX.md  POLICY_GUIDE.md  PUBLISH_COMPLETE.md  QUICKSTART.md  QUICK_START.md  README.md  README_STRUCTURE.md  REBRANDING_COMPLETE.md  REPORTS_README.md  SECURITY_RULES.md  TESTING_REPORT.md  TESTNET_SETUP.md  YOU_ARE_HERE.md  demo_p0.py  my_verdict.json  pyproject.toml  verdict_p0_demo.json
.github/workflows/: README.md  lint.yml  tests.yml
compalgo/: __init__.py  config.py
compalgo/analyzer/: checker.py
compalgo/cli/: main.py
compalgo/client/: __init__.py  algorand.py  indexer.py
compalgo/core/: verdict.py
compalgo/policies/: aleo-baseline.json  controls_catalog.json  pci-dss-algorand.json  pci-dss-basic.json  pci-dss-standard.json  pci-secure-software.json  pci-tokenization.json  security-baseline.json
compliledger_algorand/: __init__.py
compliledger_algorand/analyzer/: __init__.py  checker.py  parser.py  teal_parser.py
compliledger_algorand/cli/: main.py
compliledger_algorand/client/: __init__.py  algorand.py
compliledger_algorand/policies/: algorand-baseline.json
examples/: anchor_and_verify.py  p0_complete_demo.py  vulnerable_contract.teal  vulnerable_escrow.py
examples/output/: .gitkeep
tests/: README.md  conftest.py  run_tests.py  test_checker.py  test_e2e_anchor.py  test_e2e_full_flow.py  test_parser.py  test_rule_engine.py  test_verdict.py  test_verdict_hashing.py  test_verify_indexer.py
tests/fixtures/: clean_escrow.py  partial_violations.py  vulnerable.teal
