[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "compalgo"
version = "0.1.0"
description = "CompALGO SDK: Algorand smart contract compliance analysis + on-chain proof anchoring"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "CompliLedger", email = "dev@compliledger.com" }
]
keywords = ["algorand", "pyteal", "teal", "compliance", "security", "blockchain"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "py-algorand-sdk>=2.6.0",
  "click>=8.1.7",
  "rich>=13.7.0",
  "pydantic>=2.9.0",
]

[project.optional-dependencies]
interactive = ["questionary>=2.0.0"]
watch = ["watchdog>=3.0.0"]

[project.scripts]
compalgo = "compalgo.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["compalgo"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
